--- a/config.env
+++ b/config.env
@@ -19,7 +19,7 @@ USE_SERVICE_ACCOUNTS = "True"
 INDEX_URL = "https://mrotttamiloffl-links.mrxmirror.workers.dev/0:"
 STATUS_LIMIT = "2" #recommended value 2
 STOP_DUPLICATE = "True"
-CMD_INDEX = ""
+CMD_INDEX = "4"
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
@@ -41,7 +41,7 @@ UPSTREAM_BRANCH = "master"
 
 #PM SUPPORT
 BOT_PM = "True"
-FORCE_BOT_PM = ""   #For this the BOT_PM must be True 
+FORCE_BOT_PM = "True"   #For this the BOT_PM must be True 
 
 # Leech
 LEECH_LOG = "-1001896025230"
