--- a/config.env
+++ b/config.env
@@ -72,7 +72,7 @@ CHANNEL_USERNAME = "MR_X_CLOUD"
 FSUB_CHANNEL_ID = "-1001534450018"
 
 # qBittorrent
-BASE_URL_OF_BOT = "https://mrxmirror-testing.onrender.com"
+BASE_URL_OF_BOT = "https://mrxmirror-testings.onrender.com"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
