--- a/config.env
+++ b/config.env
@@ -73,7 +73,7 @@ FSUB_CHANNEL_ID = "-1001534450018"
 
 # qBittorrent
 BASE_URL_OF_BOT = "https://mrmirror-testing.herokuapp.com"
-SERVER_PORT = "80"
+SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
 
@@ -115,7 +115,6 @@ KATDRIVE_CRYPT = ""
 # (DRIVEFIRE + DRIVEBUZZ) COOKIES
 DRIVEFIRE_CRYPT = ""
 
-MR X MIRROR, [18-03-2023 03:38]
 # Limits  
 TOTAL_TASKS_LIMIT = ""
 USER_TASKS_LIMIT = ""
@@ -192,7 +191,7 @@ SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins
                    "https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/magnetdl.py",
                    "https://raw.githubusercontent.com/khensolomon/leyts/master/yts.py"]'
 
-MR X MIRROR, [18-03-2023 03:38]
+
 #Mirror Related Commands
 START_COMMAND = ""      #Default is "start"
 MIRROR_COMMAND = ""     #Default is "mirror"
